Fixing the alignment and the js to make sure code runs indipendently - qhwt-758

--- a/src/components/global_alert/css/component.scss
+++ b/src/components/global_alert/css/component.scss
@@ -10,6 +10,11 @@
 
 .qld__global-alert {
     padding:5px 0 5px 0;
+
+    .container-fluid {
+        padding-left: 2rem;
+        padding-right: 2rem;
+    }
     
     &.qld__global-alert--critical {
         background-color: $QLD-color-error;
@@ -25,6 +30,7 @@
                 text-decoration-color: $QLD-color-system-white;
             }
         }
+        
         svg{
             color: $QLD-color-system-white;
         }
